# llm_assistant_conversation

./: README.md  pyproject.toml  trial.py
docs/: THOUGHTS.MD
src/assistant/: __main__.py
src/assistant/cli/: commands.py  parser.py
src/assistant/models/: conversation.py  message.py
src/assistant/providers/: llm_provider.py  ollama_provider.py
src/assistant/services/: chat.py  conversation_service.py
