[project]
name = "cli-based-llm-tool"
version = "0.1.0"
description = "Making a cli tool which allows a user to interact with an llm through cli commands, the user is never exposed directly to the llm."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.2",
]

# Build system

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
assistant = "assistant.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]
